@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2010-12-18 (CVS):
+    * sys_win.c: Detect windows vista/7 and store in global WinVista.
+    * winquake.h: Add extern declaration for global boolean WinVista.
+
+2010-12-18 (CVS):
     * snd_dma.c: Minor cleanups in volume value boundary checking.
     * Reorganized cdaudio volume handling for all drivers. If volume is 0,
       don't bother advancing and pause.
